add config properties, datatypes.js and index.js  compiled files || datatypes and function concepts in typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,12 @@
     "types": [
       "node"
     ],
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
   "include": [
     "src/**/*.ts",
-    "classes/main.ts"
   ],
   "exclude": [
     "node_modules",
