--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    "target": "es6",
-    "module": "nodenext",
+    "target": "es2022",
+    "module": "es2022",
     "rootDir": "./src",
     "outDir": "./dist",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "strict": true,
     "types": [
       "node"
     ],
     "noEmitOnError": true,
     "allowImportingTsExtensions": true,
-    "noEmit": true
+    "noEmit": true,
+    "sourceMap": true
   },
   "include": [
     "src/**/*.ts",
@@ -21,5 +23,8 @@
   "exclude": [
     "node_modules",
     "dist"
-  ]
+  ],
+  "ts-node": {
+    "esm": true
+  }
 }
