--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "20": "^3.1.9"
   }
 }
