updated the npm version

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "20": "^3.1.9"
+    "20": "^3.1.9",
+    "@faker-js/faker": "^10.1.0",
+    "csv-parse": "^6.1.0"
   }
 }
