--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "keywords": [],
   "devDependencies": {
-    "@playwright/test": "^1.55.0",
+    "@playwright/test": "^1.57.0",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
@@ -18,6 +18,7 @@
   "dependencies": {
     "20": "^3.1.9",
     "@faker-js/faker": "^10.1.0",
-    "csv-parse": "^6.1.0"
+    "csv-parse": "^6.1.0",
+    "xlsx": "^0.18.5"
   }
 }
