--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
+  "name": "vinaypw",
+  "version": "1.0.0",
+  "description": "This is a practise project while learning Playwright through Naveen Automation Labs.",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {},
+  "author": "Vinay Gupta",
+  "license": "ISC",
+  "keywords": [],
   "devDependencies": {
     "@playwright/test": "^1.57.0",
-    "@types/node": "^25.0.3"
+    "@types/node": "^25.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^10.1.0",
+    "csv-parse": "^6.1.0",
+    "xlsx": "^0.18.5"
   }
 }
