--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test",
+    "test:qa": "npx playwright test --config= playwright.config.qa.ts",
+    "test:stage": "npx playwright test --config= playwright.config.stage.ts",
     "allure:genrate": "npx allure generate allure-results --clean -o allure-report",
     "allure:open": "npx allure open allure-report"
+    // npm run allure:open        // Report खोलने के लिए
+    // npm run allure:genrate     // Report generate करने के लिए
   },
   "keywords": [],
   "author": "",
@@ -17,5 +21,8 @@
     "@types/node": "^25.0.3",
     "allure-commandline": "^2.36.0",
     "allure-playwright": "^3.4.3"
+  },
+  "dependencies": {
+    "csv-parse": "^6.1.0"
   }
 }
